Correction d'un bug sur l'overflow des tooltips de la sidebar

--- a/src/components/Games/Games.css
+++ b/src/components/Games/Games.css
@@ -6,7 +6,7 @@
 }
 
 .flexAccueil {
-    display: grid;
+    display: flex;
     flex-direction: column;
     text-align: left;
     margin-top: 20px;
