--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -206,6 +206,7 @@
   font-size: 13px;
   box-shadow: 5px 5px 5px 1px rgba(54, 54, 54, 0.2);
   white-space: pre-line;
+  overflow: hidden;
 
 }
 
